fix test name and update methods